--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "knip": "knip"
   },
   "dependencies": {
-    "@next/third-parties": "^15.5.2",
-    "botid": "^1.5.4",
+    "@next/third-parties": "^15.5.3",
+    "botid": "^1.5.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.541.0",
@@ -26,15 +26,20 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@tailwindcss/postcss": "^4.1.12",
-    "@types/node": "^24.3.0",
-    "@types/react": "^19.1.12",
+    "@tailwindcss/postcss": "^4.1.13",
+    "@types/node": "^24.5.0",
+    "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
-    "eslint": "^9.34.0",
-    "eslint-config-next": "^15.5.2",
-    "knip": "^5.63.0",
-    "tailwindcss": "^4.1.12",
-    "tw-animate-css": "^1.3.7",
+    "eslint": "^9.35.0",
+    "eslint-config-next": "^15.5.3",
+    "knip": "^5.63.1",
+    "tailwindcss": "^4.1.13",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5.9.2"
-  }
+  },
+  "trustedDependencies": [
+    "@tailwindcss/oxide",
+    "oxc-resolver",
+    "unrs-resolver"
+  ]
 }
